# report_ppt

./: .dockerignore  .gitignore  Dockerfile  Makefile  app.py  pivot_output.xlsx  pyproject.toml  requirements.txt
src/: app.py  constants.py  test.py
src/charts_generator/: __init__.py  create_bar_1st_slide.py  create_bar_2nd_slide.py  create_bar_5th_slide.py  create_pie_1st_slide.py  create_pie_4th_slide.py  create_table_3rd_slide.py
src/core/: __init__.py
src/core/charts/: create_bar_1st_slide.py  create_bar_2nd_slide.py  create_bar_5th_slide.py  create_pie_1st_slide.py  create_pie_4th_slide.py  create_table_3rd_slide.py  pie_chart.py
src/core/insights/: __init__.py  get_insight_1st_slide.py  get_insight_2nd_slide.py  get_insight_3rd_slide.py  get_insight_4th_slide.py  get_insight_5th_slide.py
src/core/models/: __init__.py  chart_configs.py
src/core/slides/: __init__.py  builder.py  create_1st_slide.py  create_2nd_slide.py  create_3rd_slide.py  create_4th_slide.py  create_5th_slide.py  create_6th_slide.py
src/core/slides/slide_utils/: shapes.py  (+1 more)
src/data_processing/: __init__.py
src/llm/: get_insight_1st_slide.py  get_insight_2nd_slide.py  get_insight_3rd_slide.py  get_insight_4th_slide.py  get_insight_5th_slide.py
src/slides_builder/: 6th_slide.py  __init__.py  builder.py  create_1st_slide.py  create_2nd_slide.py  create_3rd_slide.py  create_4th_slide.py  create_5th_slide.py  create_slide_header.py
src/slides_builder/slide_utils/: __init__.py  shapes.py  text_box.py
src/utils/: constants.py
tests/: test.py
utils/: extract_images.py
